定位功能完善,以及定位权限监测,广播监测网络状态,跳转页面设置网络或权限功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    compile 'com.github.wangchengen:LocationLibrary:+'
+    compile 'com.github.wangchengen:LocationLibrary:3.1'
+
 }
