--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
     sourceSets {
         main {
-            jniLibs.srcDirs = ['libs','src/main/jniLibs']
+            jniLibs.srcDirs = ['libs', 'src/main/jniLibs']
         }
     }
 
@@ -28,13 +28,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.orhanobut:logger:+'
     compile 'com.squareup.retrofit2:retrofit:+'
     compile 'com.squareup.retrofit2:converter-gson:+'
     compile 'com.squareup.retrofit2:adapter-rxjava2:+'
@@ -45,7 +44,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.github.wangchengen:LocationLibrary:3.1'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
 
     compile files('libs/BaiduLBS_Android.jar')
-//    compile 'com.github.wangchengen:LocationLibrary:3.1'
 }
