--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.github.wangchengen:LocationLibrary:3.1'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 
     compile files('libs/BaiduLBS_Android.jar')
 }
